--- a/public/output.css
+++ b/public/output.css
@@ -733,6 +733,14 @@ video {
   margin-top: 2.25rem;
 }
 
+.mb-1{
+  margin-bottom: 0.25rem;
+}
+
+.mb-0{
+  margin-bottom: 0px;
+}
+
 .flex{
   display: flex;
 }
@@ -775,10 +783,6 @@ video {
 
 .h-6{
   height: 1.5rem;
-}
-
-.h-7{
-  height: 1.75rem;
 }
 
 .h-8{
@@ -857,10 +861,6 @@ video {
   width: 1.5rem;
 }
 
-.w-7{
-  width: 1.75rem;
-}
-
 .w-9{
   width: 2.25rem;
 }
@@ -901,8 +901,8 @@ video {
   max-width: 64rem;
 }
 
-.max-w-\[29rem\]{
-  max-width: 29rem;
+.max-w-\[25rem\]{
+  max-width: 25rem;
 }
 
 .max-w-screen-lg{
@@ -1012,10 +1012,6 @@ video {
   padding: 1rem;
 }
 
-.p-5{
-  padding: 1.25rem;
-}
-
 .p-6{
   padding: 1.5rem;
 }
@@ -1086,12 +1082,20 @@ video {
   line-height: 1rem;
 }
 
+.text-\[\.5rem\]{
+  font-size: .5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
 
 .font-extrabold{
   font-weight: 800;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .font-medium{
@@ -1136,6 +1140,10 @@ video {
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
 }
 
 .no-underline{
@@ -1565,6 +1573,27 @@ button,
 
 .projects .content .box{
   background: var(--container-color-desktop);
+}
+
+.projects .content .box:first-child h2{
+  background: #751D77;
+  background: linear-gradient(to right, #751D77 0%, #953276 50%, #CF47C8 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.projects .content .box:nth-child(2) h2{
+  background: #111362;
+  background: linear-gradient(to right, #111362 0%, #2849AC 50%, #3B7DCF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.projects .content .box:last-child h2{
+  background: #000000;
+  background: linear-gradient(to right, #000000 0%, #6F6663 50%, #E5C3C3 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* ============== CONTACT SECTION ============== */
